--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,18 @@
 	
 	<name>Dummy</name>
 	
+	<dependencies>
+	
+		<!-- JUnit -->
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+	
+	</dependencies>
+	
 </project>
 
